--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
+    "mongoose-type-email": "^1.1.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
